--- a/demo/handout/00-00-001_bike.md
+++ b/demo/handout/00-00-001_bike.md
@@ -1,7 +1,7 @@
 # bike
-**03.03.2024 - 24.03.2024  //  0 recent / 0 in inbox / 1 older**
+**30.03.2024 - 06.04.2024  //  0 recent / 0 in inbox / 1 older**
 
-<details style="color:gray; border:2px solid; padding: 1em">
+<details style="color:gray; border:2px solid; padding: 1em;">
   <summary>bike: older entries</summary>
 
 ## 2024-03-01 06:28 xbike call from bike shop
